fix(frontend,activity): right-align author (#3862)
Refs #3849.

--- a/frontend/src/component/Activity/ContentActivityHeader.styl
+++ b/frontend/src/component/Activity/ContentActivityHeader.styl
@@ -21,8 +21,6 @@
     margin-left 10px
     text-align right
     align-items flex-end
-    display flex
-    flex-direction column
 
   & .breadcrumbs
     position relative
